@@ -408,8 +408,12 @@ class TypeInformation(SimpleItemWithProperties, ActionProviderBase):
         if isinstance(value, list):
             value = tuple(value)
         setattr(self, id, value)
-        if value and id.endswith('_expr'):
-            setattr(self, '%s_object' % id, Expression(value))
+        if id.endswith('_expr'):
+            attr = '%s_object' % id
+            if value:
+                setattr(self, attr, Expression(value))
+            elif hasattr(self, attr):
+                delattr(self, attr)
 
     def _checkAvailable(self, ec):
         """ Check if the action is available in the current context.
